--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,11 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 :root {
     --main-bg-color: #2874f0;
+    --main-box-color: rgb(236, 229, 229);
   }
 header{
     background-color: var(--main-bg-color);
@@ -98,6 +100,35 @@ nav{
 }
 .A1 img,h4 :hover{
     cursor: pointer;
+}
+.box button{
+    background-color: var(--main-bg-color);
+    width: 6vw;
+    color:white ;
+    position: relative;
+    float: right;
+    height: 36px;
+    border: none;
+    border-radius: 2px;
+}
+.contentcombo{
+    background-color: var(--main-box-color);
+    display: flex;
+    justify-content: start;
+    justify-content: space-between;
+    margin: 20px 15px;
+    overflow: scroll;
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    width: 20vw;  
+    justify-content: center;
+    align-items: center;
+    padding: 44px;
+}
+.content p{
+    text-align: center;
 }
 footer{
     font-family: 'Roboto Condensed', sans-serif;
