--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ nav{
     width: 6vw;
 }
 .logo span{
-    padding-top: 3px;
+    margin-top: -3px;
     font-size: 1vw;
 }
 .logo span img{
@@ -43,6 +43,12 @@ nav{
 .search input{
     width: 25.6vw;
     height: 30px;
+}
+.search button{
+    margin-left: -3px;
+    background-color: white;
+    margin-top: 1px;
+    border-radius: 3px;
 }
 .search button img{
     height:23px;
@@ -71,11 +77,13 @@ nav{
 }
 .loginbtn ul li{
     background-color: whitesmoke;
-    text-decoration: none;
-    border-radius: 4px;
+    border-radius: 2px;
+    width: 43px;
+    text-align: center;
 }
 .loginbtn ul li a{
-    font-size: 25px;
+    font-size: 22px;
+    text-decoration: none;
 }
 .A1{
     min-width: 90vw;
@@ -101,6 +109,19 @@ nav{
 .A1 img,h4 :hover{
     cursor: pointer;
 }
+.box{
+    padding: 2vh 0px;
+    background-color: #e3e7e3a3;
+    padding-left: 1%;
+    margin-bottom: 2vh;
+}
+.box h2,
+h3{
+    padding-left: 15px;
+}
+h3{
+    color: rgb(207, 158, 33);
+}
 .box button{
     background-color: var(--main-bg-color);
     width: 6vw;
@@ -110,12 +131,13 @@ nav{
     height: 36px;
     border: none;
     border-radius: 2px;
+    padding-left: 8px;
+    cursor: pointer;
 }
 .contentcombo{
     background-color: var(--main-box-color);
     display: flex;
     justify-content: start;
-    justify-content: space-between;
     margin: 20px 15px;
     overflow: scroll;
 }
@@ -127,6 +149,14 @@ nav{
     align-items: center;
     padding: 44px;
 }
+.content img{
+    width: 135px;
+    cursor: pointer;
+}
+.content img:hover{
+    width: 140px;
+    
+}
 .content p{
     text-align: center;
 }
@@ -135,5 +165,6 @@ footer{
     height: 10vh;
     background-color: var(--main-bg-color);
     color: white;
+    letter-spacing: 2px ;
 }
 
