--- a/css/style.css
+++ b/css/style.css
@@ -77,52 +77,55 @@ button a{
 }
 .A1{
     min-width: 90vw;
-    height: 16vh;
+    height: 100px;
+    padding: 50px;
+    margin-top: 20px;
+    margin-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: auto;
-    white-space: nowrap;
-    box-shadow: 10px 5px 5px rgb(61, 120, 139);
+    overflow: scroll;
+    box-shadow: 10px 4px 4px rgb(212, 217, 219);
 }
 .A1 div{
     display: flex;
     flex-direction: column;
 }
 .A1 img{
-    margin: 0px 2vw;
+    margin: 0px 25px;
     width: 70px;
 }
 .A1 h4{
-    margin: 0px 2vw;
+    margin: 0px 25px;
 }
-.A1 img,h4 :hover{
+.A1 img :hover{
     cursor: pointer;
 }
+.mySlides img{
+    width: 80%;
+    min-height: 120px;
+    position: relative;
+    left: 10%;
+}
 .box{
-    padding: 2vh 0px;
-    background-color: #e3e7e3a3;
-    padding-left: 1%;
-    margin-bottom: 2vh;
+    margin: 30px 10px;
+    background-color: rgb(250, 250, 244);
 }
-.box h2,
-h3{
-    padding-left: 15px;
-}
-h3{
-    color: rgb(207, 158, 33);
+h2{
+    display: inline;
 }
 .box button{
     background-color: var(--main-bg-color);
-    width: 6vw;
+    min-width:80px;
     color:white ;
-    position: relative;
-    float: right;
     height: 36px;
-    border: none;
-    border-radius: 2px;
-    padding-left: 8px;
+    border-radius: 6px;
+    position: absolute;
     cursor: pointer;
+    right: 20px;
+}
+h3{
+    color: rgb(207, 158, 33);
 }
 .contentcombo{
     background-color: var(--main-box-color);
@@ -140,20 +143,15 @@ h3{
     padding: 44px;
 }
 .content img{
-    width: 135px;
+    width: 100px;
     cursor: pointer;
 }
-.content img:hover{
-    width: 140px;
-    
-}
-.content p{
-    text-align: center;
-}
 footer{
-    height: 10vh;
+    height: 50px;
     background-color: var(--main-bg-color);
     color: white;
-    letter-spacing: 2px ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
